Fix checkbox alignment

--- a/src/styles/Checkbox.css
+++ b/src/styles/Checkbox.css
@@ -30,13 +30,13 @@
 
   position: absolute;
 
-  margin-left: -20px;
-  margin-top: -10px;
+  margin-left: -15px;
+  margin-top: -5px;
 
   opacity: 1;
 
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
 
   padding: 5px;
 }
